install-cluster/upgrade/knative/v0.19.0-to-v0.20.0/cluster-local-gateway-deprecated.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{},"labels":{"networking.knative.dev/ingress-provider":"istio","serving.knative.dev/release":"v0.15.0"},"name":"cluster-local-gateway","namespace":"knative-serving"},"spec":{"selector":{"istio":"cluster-local-gateway"},"servers":[{"hosts":["*"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
  creationTimestamp: "2020-10-29T05:37:55Z"
  generation: 1
  labels:
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: v0.15.0
  name: cluster-local-gateway
  namespace: knative-serving
  resourceVersion: "84384"
  selfLink: /apis/networking.istio.io/v1beta1/namespaces/knative-serving/gateways/cluster-local-gateway
  uid: 5d077996-56f1-4fdc-914c-6e22bf517121
spec:
  selector:
    istio: cluster-local-gateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
